--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <h1>iniciando</h1>
-    <p>poliana</p>
+    <p>colegio santo antonio</p>
 </head>
 <body>
     
