--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <h1>iniciando</h1>
-    <p>colegio santo antonio</p>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Colegio Estadual Santo Antonio</h1>
+    <p>Sobre o Colegio
+
+        Fundado em 1912,localizado na avenida 7 de setembro,centro.
+        Colegio bonito,limpo,contendo 3 quadras abertas para os alunos se exercitarem na educaçao fisica.Sempre pensando no bem estar dos alunos.
+        Tendo otimos lanches, otimos professores, funcionarios, etc.
+        Colegio contendo aproximadamente 52 turmas, 20 do ensino fundamental e 32 do ensino medio.
+
+        
+    </p>
 </body>
 </html>
