--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flickr.com%2Fphotos%2Fflavioarns%2F8579824156&psig=AOvVaw080nDMm4t3kyiWLyEoztTZ&ust=1682793901254000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJjHuZyezf4CFQAAAAAdAAAAABAD">
 </head>
+
+
 <body>
-    <h1>Colegio Estadual Santo Antonio</h1>
+    <h1>COLEGIO ESTADUAL SANTO ANTONIO</h1>
     <p>Sobre o Colegio
 
         Fundado em 1912,localizado na avenida 7 de setembro,centro.
         Colegio bonito,limpo,contendo 3 quadras abertas para os alunos se exercitarem na educaçao fisica.Sempre pensando no bem estar dos alunos.
         Tendo otimos lanches, otimos professores, funcionarios, etc.
         Colegio contendo aproximadamente 52 turmas, 20 do ensino fundamental e 32 do ensino medio.
+        Diretor(a):  Carlos Eduardo Bittencourt Gomes
 
-        
     </p>
 </body>
 </html>
