--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flickr.com%2Fphotos%2Fflavioarns%2F8579824156&psig=AOvVaw080nDMm4t3kyiWLyEoztTZ&ust=1682793901254000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJjHuZyezf4CFQAAAAAdAAAAABAD">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">">
+    <link rel="stylesheet" href="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg">
 </head>
 
 
