--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">">
-    <link rel="stylesheet" href="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg">
+    
 </head>
 
 
 <body>
     <h1>COLEGIO ESTADUAL SANTO ANTONIO</h1>
-    <p>Sobre o Colegio
-
-        Fundado em 1912,localizado na avenida 7 de setembro,centro.
-        Colegio bonito,limpo,contendo 3 quadras abertas para os alunos se exercitarem na educaçao fisica.Sempre pensando no bem estar dos alunos.
-        Tendo otimos lanches, otimos professores, funcionarios, etc.
-        Colegio contendo aproximadamente 52 turmas, 20 do ensino fundamental e 32 do ensino medio.
-        Diretor(a):  Carlos Eduardo Bittencourt Gomes
-
-    </p>
+<p>Sobre o colegio 
+    temos um amplo espaço para os alunos, com 3 quadras abertas para se exercitar ao ar livre na educaçao fisica.
+    Um otimo lanche, uma otima higienizaçao, otimos professores e funcionarios.
+    O colegio foi fundado em 1912,localizado em Imbituva-pr, avenida 7 de setembro, centro.
+    Contendo em torno de 52 turmas, 20 do Ensino Fundamental e 32 do ensino medio.
+</p>
+<img src="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg" alt="">
 </body>
 </html>
