--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     O colegio foi fundado em 1912,localizado em Imbituva-pr, avenida 7 de setembro, centro.
     Contendo em torno de 52 turmas, 20 do Ensino Fundamental e 32 do ensino medio.
 </p>
+
+
 <img src="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg" alt="">
+<footer></footer>
 </body>
 </html>
