--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
 
 
 <img src="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg" alt="">
+<footer>]
+    <img src=”./img/alurastart logo 1.png” alt=”logo da alura start”>
+</footer>
 </body>
 </html>
