--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     Um otimo lanche, uma otima higienizaçao, otimos professores e funcionarios.
     O colegio foi fundado em 1912,localizado em Imbituva-pr, avenida 7 de setembro, centro.
     Contendo em torno de 52 turmas, 20 do Ensino Fundamental e 32 do ensino medio.
+
+    Sobre a turma do 2 d, confesso que e um pouco bagunceira e gosta de falar, porem sao otimos alunos e sabem qual horario precisa ficar em silencio.
 </p>
 
 
 
 <img src="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg" alt="">
 <footer>]
-    <img src=”./img/alurastart logo 1.png” alt=”logo da alura start”>
+    <img src=”./img/alurastart logo 1.png” alt=>
 </footer>
 
 </body>
