--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
 
 <img src="https://live.staticflickr.com/8515/8579824156_a352feef54_b.jpg" alt="">
+
+
 <footer>]
+    *TODOS OS DIREITOS RESERVADOS*
     <img src=”./img/alurastart logo 1.png” alt=>
 </footer>
-
 </body>
 </html>
